Bump Spring Boot to version 4.0.0